2008-03-01 Nicola Pero <nicola.pero@meta-innovation.com>

	* Source/NSImageCell.m (scaleProportionally): Fixed
	NSScaleProportionally to scale images down, but never up.  Bug
	reported by Herb Otto <herbo@gmac.com>.
	* Headers/AppKit/NSImageCell.h: Documented the whole class.
	
2008-02-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSToolTips.m: Fix bug #22421

2008-02-25 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSBitmapImageRep.m (-_premultiply, _unpremultiply): Flag
	the format as changed. Add fast path for 8 bit images.
	* Source/NSBitmapImageRep.m
	(-_convertToFormatBitsPerSample:...bitsPerPixel:) New helper
	method for image conversion. Not fully working.
	
2008-02-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m: Change to better respect the size of the
	popup when displaying the menu.
	Reworked patch by Matt Rice <ratmice@gmail.com>. 
	
2008-02-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m: Change version for encoding. Set
	preferred edge and arrow position when decoding old gorm files.
	New helper method for Gorm.

2008-02-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m: White space cleanup.

2008-02-16 20:43-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSCell.m: Correction for bug#22332.
	* Source/NSSegmentedCell.m: 
	* Source/NSSegmentedControl.m: Set up default values in init 
	methods.

2008-02-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableColumn.m (-initWithIdentifier:): Set _width to 100
	and _min_width to 10.
	Patch by Quentin Mathe <qmathe@club-internet.fr>. 

2008-02-12  Adam Fedor  <fedor@gnu.org>

	* Source/GSFusedSilicaContext.m: Make sure to allocate a
	mutable dictionary.

2008-02-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFont.m (-initWithName:matrix:fix:screenFont:role:): Add
	fallback for more missing standard fonts (LucidaGrande).

2008-02-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-_viewWillMoveToWindow:,